# fast-extractor

./: .gitignore  COMPATIBILITY.md  LICENSE  README.md  index.html  package-lock.json  package.json  scratch.js  test_build.sh  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts  wrangler.jsonc
.github/workflows/: deploy.yml
docs/: AUDIT_CHECKLIST.md  WEBCODECS_HAZARDS.md  slide-detection-engine.md  slide-detection-orchestrator.md  slide-detection-wasm.md  wasm-engine.md
ffmpeg-wasm-core/: Cargo.toml  build_wasm.sh  compile_flags.txt  test.js
ffmpeg-wasm-core/src/: demuxer.c
ffmpeg-wasm-demuxer/: Cargo.toml  build.rs  build_ffmpeg.sh  build_wasm.sh  compile_flags.txt  test.cjs
ffmpeg-wasm-demuxer/ffmpeg_build/ffmpeg-8.1/: config.h  config_components.h
ffmpeg-wasm-demuxer/src/: lib.rs
public/: _headers  wasm_extractor_bg.wasm
src/: App.tsx  GridMaskPicker.tsx  extractor.ts  fast-extractor.ts  index.css  worker.ts
src/engine/: FastExtractor.ts  errors.ts  extractor.ts  fast-extractor.ts  index.ts  pipeline.ts  types.ts  wasm_extractor.js  worker.ts  workspace-manager.ts
src/engine/wasm/: wasm_extractor.d.ts  wasm_extractor.js  wasm_extractor_bg.wasm  wasm_extractor_bg.wasm.d.ts
src/types/: mp4box.d.ts
src/ui/: App.tsx  GoogleDriveDemo.tsx  GridMaskPicker.tsx  index.css  types.ts  useFastExtractor.ts  utils.ts
src/ui/components/: CapabilityBanner.tsx  ConfigPanel.tsx  (+3 more)
src/wasm/: package.json  wasm_extractor.d.ts  wasm_extractor.js  wasm_extractor_bg.wasm
wasm-extractor/: Cargo.toml
wasm-extractor/src/: lib.rs
(+236 files in other folders)
